# risotto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
contra-demo/: CMakeLists.txt  contra-demo-client.py  contra_demo.cpp  ring_recipe.cpp  ring_recipe.hpp  thread_forwarding_sampler.hpp
placeholder/: CMakeLists.txt  placeholder.cpp
